<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/custom_dialog"
    android:id="@+id/dialog_add_group_linear_layout"
    android:layout_margin="20dp">

    <ImageView
        android:id="@+id/dialog_add_group_iv_cancel"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_clear"
        android:layout_gravity="right" />

    <TextView
        android:id="@+id/dialog_add_group_tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        android:text="@string/group_name"
        android:textColor="@color/black"
        android:textSize="22dp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_add_group_til_name_group"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="360dp"
        android:layout_height="85dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_name_group"
        android:textColorHint="@color/teal_900"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_add_group_et_name_group"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="20dp"
            android:textColor="@color/teal_900" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/dialog_add_group_btn_save"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/custom_btn"
        android:text="@string/add_group"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:layout_gravity="center"/>

</LinearLayout>