<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/teal_200"
        android:id="@+id/activity_login_frame_content">

        <TextView
            android:id="@+id/activity_login_tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="70dp"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="15dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/s_logo"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="650dp"
            android:background="@drawable/custom_login_form"
            android:layout_gravity="bottom"
            android:layout_marginTop="200dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/teal_900"
                android:textSize="36sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_login_til_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="330dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:hint="@string/username"
                android:textColorHint="@color/teal_900"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_login_et_username"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:paddingLeft="20dp"
                    android:textColor="@color/teal_900" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_login_til_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="330dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:hint="@string/password"
                android:textColorHint="@color/teal_900"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeWidth="2dp"
                app:endIconMode="password_toggle"
                app:passwordToggleTint="@color/teal_900">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_login_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textColor="@color/teal_900" />
            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/activity_login_btn_login"
                android:layout_width="330dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_login_tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:text="@string/forget_password"
                android:textColor="@color/teal_900"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/activity_login_tv_new_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:text="@string/create_an_account"
                android:textColor="@color/teal_900"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/activity_login_tv_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:drawableRight="@drawable/ic_forward"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="50dp"
                android:justificationMode="inter_word"
                android:text="@string/skip"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>