<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ForgetPasswordFragment">

    <LinearLayout
        android:id="@+id/fragment_forget_password_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_forget_password_tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_black_back"
            android:layout_marginTop="48dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textStyle="bold"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginTop="80dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_forget_password_til_new_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="85dp"
            android:layout_marginTop="50dp"
            android:textColorHint="@color/black"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_forget_password_et_new_password"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:hint="@string/new_password"
                android:paddingLeft="20dp"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_forget_password_til_confirm_new_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="85dp"
            android:layout_marginTop="2dp"
            android:layout_gravity="center"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            android:textColorHint="@color/black"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_forget_password_et_confirm_new_password"
                android:layout_height="58dp"
                android:hint="@string/confirm_new_password"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:paddingLeft="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/fragment_forget_password_btn_update"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_button"/>
    </LinearLayout>

</FrameLayout>